# 007-first-light-trainer

./: .version  README.md  last-updated.txt
007-first-light-trainer/: 007-first-light-trainer.csproj  CMakeLists.txt  Program.cs  main.cpp  main.py  memory_reader.py  requirements.txt  trainer.py
007-first-light-trainer.Tests/: MemoryManagerTests.cs
007-first-light-trainer/Features/: GameFeatures.cs
007-first-light-trainer/Memory/: MemoryManager.cs
007-first-light-trainer/Properties/: AssemblyInfo.cs
007-first-light-trainer/include/: memory.h  trainer.h
007-first-light-trainer/src/: memory.cpp  trainer.cpp
007-first-light-trainer/test/: test_trainer.cpp
007-first-light-trainer/tests/: test_trainer.py
